# Armoricore

./: .env.example  .gitignore  ARCHITECTURE.md  ARCRTC_PROTOCOL_SPECIFICATION.md  ARCRTC_QUICK_REFERENCE.md  CONFIGURATION.md  LICENSE  LINUX_SERVER_INSTALLATION.md  NOTICE  QUICK_START.md  README.md  README_STARTUP.md  RFC_COMPLIANCE.md  STARTUP_AND_OPERATION.md  create_test_data.exs  start_all.sh  test_end_to_end.sh  test_system.sh
docs/: api.md  deployment.md  development.md
elixir_realtime/: .env.example  .formatter.exs  .gitignore  CHANNELS.md  mix.exs
elixir_realtime/assets/css/: app.css
elixir_realtime/assets/js/: app.js
elixir_realtime/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir_realtime/lib/: armoricore_realtime.ex  armoricore_realtime_web.ex
elixir_realtime/lib/armoricore_realtime/: accounts.ex  analytics.ex  application.ex  audit.ex  auth.ex  call_manager.ex  e2ee.ex  jwt.ex  key_manager.ex  media.ex  media_engine_client.ex  message_bus.ex  presence.ex  repo.ex  security.ex
elixir_realtime/lib/armoricore_realtime/accounts/: user.ex
elixir_realtime/lib/armoricore_realtime/analytics/: event.ex
elixir_realtime/lib/armoricore_realtime/audit/: log.ex
elixir_realtime/lib/armoricore_realtime/e2ee/: key.ex
elixir_realtime/lib/armoricore_realtime/media/: consumer.ex  distributed.ex  media_file.ex  pipeline.ex  priority_queue.ex  processor_pool.ex
elixir_realtime/lib/armoricore_realtime/security/: revoked_token.ex
elixir_realtime/lib/armoricore_realtime_web/: endpoint.ex  router.ex  telemetry.ex
elixir_realtime/lib/armoricore_realtime_web/channels/: channel_helpers.ex  chat_channel.ex  comments_channel.ex  e2ee_channel.ex  media_channel.ex  presence_channel.ex  signaling_channel.ex  user_socket.ex
elixir_realtime/lib/armoricore_realtime_web/components/: core_components.ex  layouts.ex
elixir_realtime/lib/armoricore_realtime_web/controllers/: auth_controller.ex  error_html.ex  error_json.ex  health_controller.ex  page_controller.ex  page_html.ex
elixir_realtime/lib/armoricore_realtime_web/plugs/: authenticate.ex  input_validator.ex  rate_limiter.ex
elixir_realtime/priv/repo/migrations/: 20250101000001_create_users.exs  20250101000002_create_revoked_tokens.exs  20250101000003_create_audit_logs.exs  20250101000004_create_media.exs  20250101000005_create_analytics_events.exs  20250101000006_create_e2ee_keys.exs
elixir_realtime/test/: test_helper.exs
elixir_realtime/test/armoricore_realtime/: accounts_test.exs  auth_test.exs  jwt_test.exs  security_test.exs
elixir_realtime/test/armoricore_realtime_web/channels/: chat_channel_test.exs  comments_channel_test.exs  presence_channel_test.exs  signaling_channel_test.exs  user_socket_test.exs
elixir_realtime/test/armoricore_realtime_web/controllers/: auth_controller_test.exs  error_html_test.exs  error_json_test.exs  (+1 more)
elixir_realtime/test/integration/: auth_flow_test.exs  e2e_workflow_test.exs
elixir_realtime/test/support/: conn_case.ex
rust-services/: .env.example  Cargo.toml
rust-services/ai-connectors/: Cargo.toml
rust-services/ai-connectors/src/: anthropic.rs  error.rs  lib.rs  manager.rs  openai.rs  traits.rs
rust-services/ai-workers/: Cargo.toml
rust-services/ai-workers/src/: main.rs  worker.rs
rust-services/armoricore-config/: Cargo.toml
rust-services/armoricore-config/src/: lib.rs
rust-services/armoricore-keys/: Cargo.toml
rust-services/armoricore-keys/src/: error.rs  key_store.rs  key_types.rs  kms.rs  lib.rs  local_store.rs  service_integration.rs
rust-services/armoricore-logging/: Cargo.toml
rust-services/armoricore-logging/src/: lib.rs
rust-services/armoricore-types/: Cargo.toml
rust-services/armoricore-types/src/: error.rs  events.rs  lib.rs  schemas.rs
rust-services/media-processor/: AKAMAI_INTEGRATION.md  CODECS_AND_RESOLUTIONS.md  Cargo.toml  README.md  run_benchmark.sh  test_hardware.sh
rust-services/media-processor/benches/: encoding_benchmarks.rs  simple_benchmark.rs
rust-services/media-processor/src/: downloader.rs  encryption.rs  health.rs  lib.rs  main.rs  processor.rs  retry.rs  storage.rs  worker.rs
rust-services/media-processor/tests/: downloader_tests.rs  mp4_generation_test.rs  performance_tests.rs  processor_tests.rs
rust-services/media-relay/: Cargo.toml
rust-services/media-relay/src/: allocation.rs  error.rs  lib.rs  relay_server.rs  stun_turn_handler.rs
rust-services/message-bus-client/: Cargo.toml
rust-services/message-bus-client/src/: error.rs  lib.rs  nats.rs  traits.rs
rust-services/message-bus-client/tests/: nats_tests.rs
rust-services/notification-worker/: Cargo.toml  README.md
rust-services/notification-worker/src/: database.rs  dead_letter_queue.rs  health.rs  lib.rs  main.rs  rate_limiter.rs  retry.rs  sender.rs  worker.rs
rust-services/notification-worker/tests/: retry_tests.rs  sender_tests.rs
rust-services/realtime-media-engine/: Cargo.toml  README.md
rust-services/realtime-media-engine-grpc/: Cargo.toml  build.rs
rust-services/realtime-media-engine-grpc/proto/: media_engine.proto
rust-services/realtime-media-engine-grpc/src/: main.rs  service.rs
rust-services/realtime-media-engine/src/: adaptive_bitrate.rs  arcrtp_handler.rs  arcsignaling.rs  audio_pipeline.rs  audio_processing.rs  bandwidth_estimation.rs  codec_selection.rs  congestion_control.rs  connection_health.rs  dtls.rs  error.rs  fec.rs  h264_payload.rs  hardware_acceleration.rs  ice.rs  jitter_buffer.rs  key_integration.rs  lib.rs  low_latency.rs  nack.rs  packet_loss_concealment.rs  packet_router.rs  protocol_bridge.rs  rtcp.rs  rtp_handler.rs  rtp_retransmission.rs  scip_payload.rs  sdp.rs  srtp_pipeline.rs  stream_manager.rs  video_pipeline.rs  vvc_payload.rs  webrtc_media.rs
rust-services/test-utils/: Cargo.toml
rust-services/test-utils/src/: main.rs
scripts/: migrate_keys_standalone.exs  migrate_keys_to_key_store.exs  migrate_keys_to_key_store.rs
tests/: Cargo.toml
tests/integration/: e2e_media_notification_test.rs  media_processing_test.rs  notification_test.rs
tests/load/: load_test.rs
(+1 files in other folders)
