[workspace]
members = [
    "message-bus-client",
    "armoricore-types",
    "armoricore-config",
    "armoricore-logging",
    "notification-worker",
    "media-processor",
    "ai-workers",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Francisco F. Pinochet"]
license = "Apache-2.0"
repository = "https://github.com/your-org/armoricore"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Message bus clients
async-nats = "0.33"
lapin = { version = "2.0", features = ["tokio"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

