[package]
name = "ai-workers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ai-workers"
path = "src/main.rs"

[dependencies]
message-bus-client = { path = "../message-bus-client" }
armoricore-types = { path = "../armoricore-types" }
armoricore-config = { path = "../armoricore-config" }
armoricore-logging = { path = "../armoricore-logging" }
tokio = { workspace = true }
tracing = { workspace = true }

