[package]
name = "armoricore-keys"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate-keys"
path = "src/bin/migrate-keys.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
