[package]
name = "realtime-media-engine-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC server for realtime-media-engine"

[[bin]]
name = "realtime-media-engine-grpc"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
realtime-media-engine = { path = "../realtime-media-engine" }
armoricore-keys = { path = "../armoricore-keys" }
armoricore-logging = { path = "../armoricore-logging" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Async utilities
futures = "0.3"

# Bytes for efficient buffer handling
bytes = "1.5"

# Logging
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"

