[package]
name = "test-utils"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "publish_test_event"
path = "src/main.rs"

[dependencies]
async-nats = { workspace = true }
bytes = "1.5"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

